# jutsu-downloader-rs

./: .gitignore  Cargo.toml  jutsu.html
src/: main.rs
